--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Chetana Joshi</h1>
-      <p>I'm <span class="typed" data-typed-items=" Student at AIET"></span></p>
+      <p>I am <span class="typed" data-typed-items=" Student at AIET"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -99,15 +99,15 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>http://127.0.0.1:5500/index.html</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>7022010156</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gokarna,Uttara Kannada</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>district</strong> <span>Uttara Kannada</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gokarna</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
       
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Under Graduate</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>chetanajoshi356@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>chetanajoshi356@gmail.com</span></li>
             
                 </ul>
               </div>
@@ -157,7 +157,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">20%</i></span>
+              <span class="skill">PHP <i class="val">10%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -171,7 +171,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Java<i class="val">85%</i></span>
+              <span class="skill">Java<i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -222,11 +222,11 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Please fill out the form and describe your project needs and I will contact you as soon as possible </p>
+          <p>This is my contact details. </p>
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
+          <div class="col-lg-20 d-flex align-items-stretch">
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
@@ -245,41 +245,9 @@
                 <h4>Call:</h4>
                 <p>7022010156</p>
               </div>
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
-
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div>
-
         </div>
 
       </div>
